# chip8

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: bitmask.h
src/: CMakeLists.txt  chip8.c  chip8.h  cpu.c  cpu.h  display.c  display.h  font.c  font.h  log.c  main.c  memory.c  memory.h  stack.c  stack.h  timer.c  timer.h
src/core/: CMakeLists.txt  chip8.c  chip8.h  font.c  log.h
src/platform/: CMakeLists.txt
src/platform/desktop/: CMakeLists.txt  audio.c  audio.h  platform_desktop.c
src/platform/include/: platform.h
test/: CMakeLists.txt  test_chip8.c  test_cpu.c  test_font.c  test_memory.c  test_stack.c  test_tests.c  test_timer.c
test/runners/: all_tests.c  test_tests_runner.c
tools/: generate_unity_runners.py
